nav piercing fix and arrow left:0 on mobile

--- a/portfolio-agency/css/style.css
+++ b/portfolio-agency/css/style.css
@@ -1358,7 +1358,7 @@ dd {
         transform: translate(0);
     }
     .artist:nth-of-type(odd) .container-fluid .work-navigation {
-        left: 10px;
+        left: 0;
         right: unset;
     }
 
